--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,24 @@
   "compilerOptions": {
     "target": "ES2024",
     "module": "esnext",
+    "moduleResolution": "bundler",
+    "lib": ["ES2024", "DOM", "DOM.Iterable"],
     "noEmit": true,
-    "strict": false,
-    "noImplicitAny": false,
-    "skipLibCheck": true
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": false,
+    "exactOptionalPropertyTypes": false,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "esModuleInterop": true
   },
   "include": ["Sources/WebInspectorKit/WebInspector/**/*.ts"]
 }
