test(hotspots): add Swift and TypeScript regression coverage for DOM/Network paths

--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "scripts": {
+    "test:ts": "vitest run",
+    "test:ts:watch": "vitest",
+    "typecheck:ts": "tsc -p tsconfig.json --noEmit"
+  },
   "devDependencies": {
-    "typescript": "^5.9.3"
+    "jsdom": "^26.0.0",
+    "typescript": "^5.9.3",
+    "vitest": "^3.0.5"
   }
 }
