--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -33,13 +33,16 @@ jobs:
         working-directory: Tools/ObfuscateJS
         run: pnpm install --frozen-lockfile
 
-      - name: Setup Swift
-        uses: swift-actions/setup-swift@v2
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
         with:
-          swift-version: "6.2"
+          xcode-version: "16.3"
 
-      - name: Show Swift version
-        run: swift --version
+      - name: Show toolchain versions
+        run: |
+          xcodebuild -version
+          swift --version
+          swift --version | grep -E "Swift version 6\\.2"
 
       - name: Run Swift tests
         run: swift test
