refactor(spm): move manifest to root and consolidate test target

--- a/WebInspectorKit.xcworkspace/xcshareddata/xcschemes/WebInspectorKitTests.xcscheme
+++ b/WebInspectorKit.xcworkspace/xcshareddata/xcschemes/WebInspectorKitTests.xcscheme
@@ -15,10 +15,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "WebInspectorKitCoreTests"
-               BuildableName = "WebInspectorKitCoreTests"
-               BlueprintName = "WebInspectorKitCoreTests"
-               ReferencedContainer = "container:WebInspectorKit">
+               BlueprintIdentifier = "WebInspectorKitTests"
+               BuildableName = "WebInspectorKitTests"
+               BlueprintName = "WebInspectorKitTests"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -34,10 +34,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "WebInspectorKitCoreTests"
-               BuildableName = "WebInspectorKitCoreTests"
-               BlueprintName = "WebInspectorKitCoreTests"
-               ReferencedContainer = "container:WebInspectorKit">
+               BlueprintIdentifier = "WebInspectorKitTests"
+               BuildableName = "WebInspectorKitTests"
+               BlueprintName = "WebInspectorKitTests"
+               ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
       </Testables>
